--- a/main.html
+++ b/main.html
@@ -4,10 +4,36 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+        .question-container {
+            max-width: 600px;
+            margin: 10px;
+            padding: 15px;
+            background-color: #f8fffe;
+            font-weight: bold;
+        }
+
+        blockquote {
+            quotes: "\201C" "\201D" "\2018" "\2019";
+            display: block;
+			border-left: 8px solid green;
+            text-indent: 1em;
+        }
+    </style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <div class="question-container">
+        <h3>What is the capital of India?</h3>
+        <form>
+            <input type="radio" name="capital" value="New Delhi"> New Delhi<br>
+            <input type="radio" name="capital" value="Mumbai"> Mumbai<br>
+        </form>
+        <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+            New Delhi is the capital of India and an administrative district of NCT Delhi.
+        </blockquote>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
